Fix overflow issues

--- a/src/window/window.css
+++ b/src/window/window.css
@@ -47,7 +47,7 @@
     }
 
     .pre-run-window {
-      @apply overflow-x-hidden overflow-y-auto flex-grow flex flex-col items-center justify-center px-8;
+      @apply overflow-x-hidden overflow-y-auto flex-grow flex flex-col items-center justify-center px-8 m-auto;
 
       .slider {
         @apply justify-center w-80 max-w-none;
